# CMakeTest

./: .gitignore  CMakeLists.txt  run
include/: hello.h
src/: main.cpp
